[gd_scene load_steps=6 format=2]

[ext_resource path="res://House.gd" type="Script" id=1]
[ext_resource path="res://HouseTileset.tres" type="TileSet" id=2]
[ext_resource path="res://NPCTileset.tres" type="TileSet" id=3]
[ext_resource path="res://Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Dialog.tscn" type="PackedScene" id=5]

[node name="House" type="Node2D"]
script = ExtResource( 1 )

[node name="HouseTileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 8
format = 1
tile_data = PoolIntArray( 720919, 1, 0, 720920, 1, 0, 720921, 1, 0, 720922, 1, 0, 720923, 1, 0, 720924, 1, 0, 720925, 1, 0, 720926, 1, 0, 720927, 1, 0, 720928, 1, 0, 720929, 1, 0, 786455, 1, 0, 786456, 5, 0, 786457, 5, 0, 786458, 5, 0, 786459, 5, 0, 786460, 5, 0, 786461, 5, 0, 786462, 5, 0, 786463, 5, 0, 786464, 5, 0, 786465, 1, 0, 851991, 1, 0, 851992, 5, 0, 851993, 5, 0, 851994, 5, 0, 851995, 5, 0, 851996, 5, 0, 851997, 5, 0, 851998, 5, 0, 851999, 5, 0, 852000, 5, 0, 852001, 1, 0, 852002, 2, 0, 852003, 2, 0, 852004, 2, 0, 852005, 2, 0, 852006, 2, 0, 852007, 2, 0, 852008, 2, 0, 852009, 2, 0, 852010, 1, 0, 917504, 13, 0, 917511, 13, 0, 917519, 13, 0, 917526, 13, 0, 917527, 1, 0, 917528, 5, 0, 917534, 5, 0, 917535, 5, 0, 917536, 5, 0, 917537, 1, 0, 917538, 5, 0, 917539, 5, 0, 917540, 5, 0, 917541, 5, 0, 917542, 5, 0, 917543, 5, 0, 917544, 5, 0, 917545, 5, 0, 917546, 1, 0, 983040, 1, 0, 983041, 1, 0, 983042, 17, 0, 983043, 1, 0, 983044, 1, 0, 983045, 1, 0, 983046, 1, 0, 983047, 17, 0, 983048, 1, 0, 983049, 1, 0, 983050, 1, 0, 983051, 1, 0, 983052, 17, 0, 983053, 1, 0, 983054, 1, 0, 983055, 1, 0, 983056, 1, 0, 983057, 17, 0, 983058, 1, 0, 983059, 1, 0, 983060, 1, 0, 983061, 1, 0, 983062, 17, 0, 983063, 1, 0, 983064, 5, 0, 983070, 5, 0, 983072, 5, 0, 983073, 1, 0, 983074, 5, 0, 983075, 5, 0, 983076, 5, 0, 983077, 5, 0, 983078, 5, 0, 983079, 5, 0, 983080, 5, 0, 983081, 5, 0, 983082, 1, 0, 1048576, 1, 0, 1048577, 1, 0, 1048578, 5, 0, 1048579, 5, 0, 1048580, 5, 0, 1048581, 5, 0, 1048582, 5, 0, 1048583, 5, 0, 1048584, 7, 0, 1048585, 5, 0, 1048587, 5, 0, 1048588, 5, 0, 1048589, 5, 0, 1048590, 5, 0, 1048591, 10, 0, 1048592, 5, 0, 1048593, 5, 0, 1048594, 5, 0, 1048596, 5, 0, 1048597, 7, 0, 1048598, 5, 0, 1048599, 5, 0, 1048600, 5, 0, 1048601, 5, 0, 1048602, 5, 0, 1048603, 5, 0, 1048604, 5, 0, 1048605, 5, 0, 1048606, 5, 0, 1048607, 5, 0, 1048608, 5, 0, 1048609, 1, 0, 1048610, 5, 0, 1048611, 5, 0, 1048612, 5, 0, 1048613, 5, 0, 1048614, 5, 0, 1048615, 5, 0, 1048616, 5, 0, 1048617, 5, 0, 1048618, 6, 0, 1114112, 1, 0, 1114113, 5, 0, 1114114, 5, 0, 1114115, 5, 0, 1114116, 5, 0, 1114117, 5, 0, 1114118, 5, 0, 1114119, 5, 0, 1114120, 5, 0, 1114121, 5, 0, 1114122, 536870917, 0, 1114123, 5, 0, 1114124, 5, 0, 1114125, 5, 0, 1114126, 5, 0, 1114127, 5, 0, 1114128, 5, 0, 1114129, 5, 0, 1114130, 5, 0, 1114131, 536870917, 0, 1114132, 5, 0, 1114133, 5, 0, 1114134, 5, 0, 1114135, 5, 0, 1114136, 5, 0, 1114137, 5, 0, 1114138, 5, 0, 1114139, 5, 0, 1114140, 5, 0, 1114141, 5, 0, 1114142, 5, 0, 1114143, 5, 0, 1114144, 5, 0, 1114145, 1, 0, 1114146, 5, 0, 1114147, 5, 0, 1114148, 5, 0, 1114149, 5, 0, 1114150, 5, 0, 1114151, 5, 0, 1114152, 5, 0, 1114153, 5, 0, 1114154, 1, 0, 1179648, 1, 0, 1179649, 5, 0, 1179650, 5, 0, 1179651, 5, 0, 1179652, 0, 0, 1179653, 5, 0, 1179654, 5, 0, 1179655, 5, 0, 1179656, 5, 0, 1179657, 5, 0, 1179658, 5, 0, 1179659, 5, 0, 1179660, 5, 0, 1179661, 5, 0, 1179662, 5, 0, 1179663, 5, 0, 1179664, 5, 0, 1179665, 5, 0, 1179666, 5, 0, 1179667, 536870917, 0, 1179668, 5, 0, 1179669, 5, 0, 1179670, 5, 0, 1179671, 5, 0, 1179672, 5, 0, 1179673, 5, 0, 1179674, 5, 0, 1179675, 5, 0, 1179676, 5, 0, 1179677, 5, 0, 1179678, 5, 0, 1179679, 5, 0, 1179680, 5, 0, 1179681, 4, 0, 1179682, 5, 0, 1179683, 5, 0, 1179684, 5, 0, 1179685, 5, 0, 1179686, 5, 0, 1179687, 5, 0, 1179688, 5, 0, 1179689, 5, 0, 1179690, 1, 0, 1245184, 1, 0, 1245185, 5, 0, 1245186, 5, 0, 1245187, 5, 0, 1245188, 5, 0, 1245189, 5, 0, 1245190, 5, 0, 1245191, 5, 0, 1245192, 5, 0, 1245193, 5, 0, 1245194, 536870917, 0, 1245195, 5, 0, 1245196, 5, 0, 1245197, 5, 0, 1245198, 5, 0, 1245199, 5, 0, 1245200, 5, 0, 1245201, 5, 0, 1245202, 5, 0, 1245203, 5, 0, 1245204, 5, 0, 1245205, 5, 0, 1245206, 5, 0, 1245207, 5, 0, 1245208, 5, 0, 1245209, 5, 0, 1245210, 5, 0, 1245211, 5, 0, 1245212, 5, 0, 1245213, 5, 0, 1245214, 5, 0, 1245215, 5, 0, 1245217, 1, 0, 1245218, 1, 0, 1245219, 1, 0, 1245220, 1, 0, 1245221, 4, 0, 1245222, 1, 0, 1245223, 1, 0, 1245224, 1, 0, 1245225, 1, 0, 1245226, 1, 0, 1310720, 1, 0, 1310721, 1, 0, 1310722, 5, 0, 1310723, 5, 0, 1310724, 5, 0, 1310725, 5, 0, 1310726, 5, 0, 1310727, 5, 0, 1310728, 7, 0, 1310729, 5, 0, 1310730, 5, 0, 1310731, 5, 0, 1310732, 5, 0, 1310733, 5, 0, 1310734, 5, 0, 1310735, 10, 0, 1310736, 5, 0, 1310737, 5, 0, 1310738, 5, 0, 1310739, 5, 0, 1310740, 5, 0, 1310741, 7, 0, 1310742, 5, 0, 1310743, 5, 0, 1310744, 5, 0, 1310745, 5, 0, 1310746, 5, 0, 1310747, 5, 0, 1310748, 5, 0, 1310749, 5, 0, 1310750, 5, 0, 1310751, 5, 0, 1310752, 5, 0, 1310753, 1, 0, 1310754, 3, 0, 1310755, 536870915, 0, 1310756, 23, 0, 1310757, 5, 0, 1310758, 5, 0, 1310759, 21, 0, 1310760, 536870933, 0, 1310761, 1, 0, 1376256, 1, 0, 1376257, 1, 0, 1376258, 1, 0, 1376259, 1, 0, 1376260, 1, 0, 1376261, 1, 0, 1376262, 1, 0, 1376263, 1, 0, 1376264, 1, 0, 1376265, 1, 0, 1376266, 1, 0, 1376267, 1, 0, 1376268, 1, 0, 1376269, 1, 0, 1376270, 1, 0, 1376271, 1, 0, 1376272, 1, 0, 1376273, 1, 0, 1376274, 1, 0, 1376275, 1, 0, 1376276, 1, 0, 1376277, 1, 0, 1376278, 1, 0, 1376279, 1, 0, 1376280, 1, 0, 1376281, 1, 0, 1376282, 1, 0, 1376283, 1, 0, 1376284, 5, 0, 1376285, 5, 0, 1376286, 5, 0, 1376287, 1, 0, 1376288, 1, 0, 1376289, 1, 0, 1376290, 5, 0, 1376291, 5, 0, 1376292, 5, 0, 1376293, 5, 0, 1376294, 5, 0, 1376295, 22, 0, 1376296, 536870934, 0, 1376297, 1, 0, 1441819, 1, 0, 1441820, 5, 0, 1441821, 5, 0, 1441822, 5, 0, 1441823, 1, 0, 1441825, 1, 0, 1441826, 5, 0, 1441827, 5, 0, 1441828, 5, 0, 1441829, 5, 0, 1441830, 5, 0, 1441831, 536870917, 0, 1441832, 536870917, 0, 1441833, 1, 0, 1507344, 1, 0, 1507345, 1, 0, 1507346, 1, 0, 1507347, 1, 0, 1507348, 1, 0, 1507349, 1, 0, 1507350, 1, 0, 1507351, 1, 0, 1507352, 1, 0, 1507353, 1, 0, 1507354, 1, 0, 1507355, 1, 0, 1507356, 5, 0, 1507357, 5, 0, 1507358, 5, 0, 1507359, 1, 0, 1507361, 1, 0, 1507362, 5, 0, 1507363, 5, 0, 1507364, 5, 0, 1507365, 5, 0, 1507366, 5, 0, 1507367, 5, 0, 1507368, 536870915, 0, 1507369, 1, 0, 1572880, 1, 0, 1572881, 7, 0, 1572882, 5, 0, 1572883, 5, 0, 1572884, 5, 0, 1572885, 5, 0, 1572886, 10, 0, 1572887, 5, 0, 1572888, 5, 0, 1572889, 5, 0, 1572891, 5, 0, 1572892, 5, 0, 1572893, 5, 0, 1572894, 5, 0, 1572895, 1, 0, 1572897, 1, 0, 1572898, 19, 0, 1572899, 536870931, 0, 1572900, 536870926, 0, 1572901, 5, 0, 1572902, 5, 0, 1572903, 5, 0, 1572904, 536870919, 0, 1572905, 1, 0, 1638416, 1, 0, 1638417, 5, 0, 1638418, 5, 0, 1638419, 5, 0, 1638420, 16, 0, 1638421, 5, 0, 1638422, 5, 0, 1638423, 5, 0, 1638424, 16, 0, 1638425, 5, 0, 1638426, 5, 0, 1638427, 5, 0, 1638428, 5, 0, 1638429, 5, 0, 1638430, 5, 0, 1638431, 1, 0, 1638433, 1, 0, 1638434, 1, 0, 1638435, 1, 0, 1638436, 1, 0, 1638437, 1, 0, 1638438, 1, 0, 1638439, 1, 0, 1638440, 1, 0, 1638441, 1, 0, 1703952, 1, 0, 1703953, 5, 0, 1703954, 5, 0, 1703955, 5, 0, 1703956, 5, 0, 1703957, 5, 0, 1703958, 5, 0, 1703959, 5, 0, 1703960, 5, 0, 1703961, 5, 0, 1703962, 5, 0, 1703963, 5, 0, 1703964, 5, 0, 1703965, 5, 0, 1703966, 5, 0, 1703967, 1, 0, 1769488, 1, 0, 1769489, 5, 0, 1769490, 5, 0, 1769491, 5, 0, 1769492, 16, 0, 1769493, 5, 0, 1769494, 5, 0, 1769495, 5, 0, 1769496, 16, 0, 1769497, 5, 0, 1769498, 5, 0, 1769499, 5, 0, 1769500, 5, 0, 1769501, 5, 0, 1769502, 5, 0, 1769503, 1, 0, 1835024, 1, 0, 1835025, 5, 0, 1835026, 5, 0, 1835027, 5, 0, 1835028, 5, 0, 1835029, 5, 0, 1835030, 5, 0, 1835031, 5, 0, 1835032, 5, 0, 1835033, 5, 0, 1835034, 5, 0, 1835035, 5, 0, 1835036, 5, 0, 1835037, 5, 0, 1835038, 5, 0, 1835039, 1, 0, 1900560, 1, 0, 1900561, 7, 0, 1900562, 14, 0, 1900563, 5, 0, 1900564, 5, 0, 1900565, 14, 0, 1900566, 5, 0, 1900567, 5, 0, 1900568, 14, 0, 1900569, 5, 0, 1900570, 5, 0, 1900571, 14, 0, 1900572, 5, 0, 1900573, 5, 0, 1900574, 5, 0, 1900575, 1, 0, 1966096, 1, 0, 1966097, 1, 0, 1966098, 1, 0, 1966099, 1, 0, 1966100, 1, 0, 1966101, 1, 0, 1966102, 1, 0, 1966103, 1, 0, 1966104, 1, 0, 1966105, 1, 0, 1966106, 1, 0, 1966107, 1, 0, 1966108, 1, 0, 1966109, 1, 0, 1966110, 1, 0, 1966111, 1, 0 )

[node name="PassableTileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 8
format = 1
tile_data = PoolIntArray( 1048578, 15, 8, 1048579, 15, 10, 1048580, 15, 10, 1048581, 15, 10, 1048582, 15, 10, 1048583, 15, 11, 1114113, 15, 8, 1114114, 15, 65541, 1114115, 15, 131081, 1114116, 15, 131081, 1114117, 15, 131081, 1114118, 15, 131081, 1114119, 15, 131083, 1179649, 15, 65544, 1179650, 15, 131081, 1179651, 15, 131081, 1179652, 15, 131081, 1179653, 15, 131081, 1179654, 15, 131081, 1179655, 15, 131083, 1245185, 15, 196616, 1245186, 15, 131077, 1245187, 15, 131081, 1245188, 15, 131081, 1245189, 15, 131081, 1245190, 15, 131081, 1245191, 15, 131083, 1245204, 9, 0, 1310722, 15, 196616, 1310723, 15, 196617, 1310724, 15, 196617, 1310725, 15, 196617, 1310726, 15, 196617, 1310727, 15, 196619, 1310733, 8, 0, 1572884, 536870921, 0, 1835031, 536870920, 0 )

[node name="NpcMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 8
format = 1
tile_data = PoolIntArray( 917529, 3, 0, 917531, 2, 0, 983071, 6, 0, 983080, 5, 0, 1048586, 1, 0, 1048595, 0, 0, 1245216, 7, 0, 1572890, 4, 0 )

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 64, 288 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="Dialog" parent="UI" instance=ExtResource( 5 )]
visible = false
margin_left = 128.0
margin_top = 464.0
margin_right = 928.0
margin_bottom = 560.0
